Add cpp proto and start python for bazel

--- a/experiments/cpp/hello/main/BUILD
+++ b/experiments/cpp/hello/main/BUILD
@@ -12,5 +12,6 @@ cc_binary(
     deps = [
         ":hello-greet",
         "//experiments/cpp/hello/lib:hello-time",
+        "//experiments/proto/hello:hello_cc_proto",
     ],
 )
