--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -7,6 +7,17 @@ jobs:
     steps:
       - run: echo "The job was triggered by a ${{ github.event_name }} event, running on ${{ runner.os }}, ${{ github.ref }} @ ${{ github.repository }}."
       - uses: actions/checkout@v4
+      - name: Cache Bazel
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cache/bazelisk
+            ~/.cache/bazel
+          # key: ${{ runner.os }}-bazel
+          # Add .bazelrc, .bazelversion, MODULE.bazel, possibly other
+          # dependencies too
+          # Or should we just setup remote caching more fully?
+          key: ${{ hashFiles('WORKSPACE') }}
       - name: Build
         run: |
           bazel build //...
