--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,8 +1,8 @@
 name: Build and Test
 run-name: ${{ github.actor }} is building and testing ${{ github.repository }}
-on: [push]
+on: [pull_request]
 jobs:
-  Explore-GitHub-Actions:
+  build_and_test:
     runs-on: ubuntu-latest
     steps:
       - run: echo "The job was triggered by a ${{ github.event_name }} event, running on ${{ runner.os }}, ${{ github.ref }} @ ${{ github.repository }}."
