Add tree/ranger/ag packages

--- a/ansible_playbooks/dev_setup.yaml
+++ b/ansible_playbooks/dev_setup.yaml
@@ -63,6 +63,11 @@
               - build-essential
               # For development purposes
               - python3.10-venv
+              # Directory Viewing Utilities
+              - tree
+              - ranger
+              # Searching
+              - silversearcher-ag
 - name: Configure Dynamic DNS
   hosts: all
   tasks:
