Reformat with gazelle

--- a/examples/basic/BUILD
+++ b/examples/basic/BUILD
@@ -1,4 +1,4 @@
-load("@aspect_rules_py//py:defs.bzl", "py_binary")
+load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_test")
 load("@rules_proto//proto:defs.bzl", "proto_library")
 load("@rules_cc//cc:defs.bzl", "cc_library")
 load("@rules_python//python:proto.bzl", "py_proto_library")
@@ -8,9 +8,9 @@ load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_doc")
 rust_binary(
     name = "hello_world",
     srcs = ["src/main.rs"],
-    aliases=aliases(),
+    aliases = aliases(),
     deps = [
-      "@crate_index//:ferris-says",
+        "@crate_index//:ferris-says",
     ],
     # XXX: Not getting to work ...
     # deps = all_crate_deps(),
@@ -25,33 +25,33 @@ rust_doc(
 )
 
 proto_library(
-  name = "hello_proto",
-  srcs = ["hello.proto"],
-  deps = [],
+    name = "hello_proto",
+    srcs = ["hello.proto"],
+    deps = [],
 )
 
 cc_proto_library(
-  name = "hello_cc_proto",
-  deps = [":hello_proto"],
-  visibility = [
-    "//examples/basic/app:__subpackages__",
-  ],
+    name = "hello_cc_proto",
+    visibility = [
+        "//examples/basic/app:__subpackages__",
+    ],
+    deps = [":hello_proto"],
 )
 
 py_proto_library(
-  name = "hello_py_pb2",
-  deps = [":hello_proto"],
+    name = "hello_py_pb2",
+    deps = [":hello_proto"],
 )
 
 py_test(
-  name = "hello_test",
-  srcs = ["hello_test.py"],
-  deps = [
-    ":hello_py_pb2",
-  ],
+    name = "hello_test",
+    srcs = ["hello_test.py"],
+    deps = [
+        ":hello_py_pb2",
+    ],
 )
 
 py_binary(
-  name = "main",
-  srcs = ["main.py"],
+    name = "main",
+    srcs = ["main.py"],
 )
