Avoid build issue

--- a/mchristen/parsing_scripts/BUILD
+++ b/mchristen/parsing_scripts/BUILD
@@ -15,3 +15,16 @@ py_binary(
 )
 
 package(default_visibility = ["//visibility:private"])
+
+py_library(
+    name = "pocket_export_html_to_csv",
+    srcs = ["pocket_export_html_to_csv.py"],
+    visibility = ["//:__subpackages__"],
+    deps = ["@pip//beautifulsoup4"],
+)
+
+py_library(
+    name = "youtube_playlist_to_csv",
+    srcs = ["youtube_playlist_to_csv.py"],
+    visibility = ["//:__subpackages__"],
+)
