--- a/ansible_playbooks/dev_setup.yaml
+++ b/ansible_playbooks/dev_setup.yaml
@@ -61,6 +61,9 @@
               # gcc
               # XXX: Determine how to get bazel running without this installed
               - build-essential
+              # java
+              # XXX: same deal as build-essential
+              - openjdk-19-jre-headless
               # For development purposes
               - python3.10-venv
               # Directory Viewing Utilities
