Downgrade gazelle to 0.33.0 and enable building of python and cc proto library definitions

--- a/examples/basic/app/BUILD
+++ b/examples/basic/app/BUILD
@@ -11,7 +11,8 @@ cc_binary(
     srcs = ["hello-world.cc"],
     deps = [
         ":hello-greet",
-        "//examples/basic:hello_cc_proto",
+        # XXX: Gazelle doesn't add this automatically ...
+        "//examples/basic:hello_cc_library",
         "//examples/basic/lib:hello-time",
     ],
 )
