--- a/examples/basic/BUILD
+++ b/examples/basic/BUILD
@@ -1,9 +1,59 @@
+load("@build_stack_rules_proto//rules/py:proto_py_library.bzl", "proto_py_library")
+load("@build_stack_rules_proto//rules/cc:proto_cc_library.bzl", "proto_cc_library")
+load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")
 load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library", "py_test")
 load("@rules_proto//proto:defs.bzl", "proto_library")
 load("@rules_cc//cc:defs.bzl", "cc_library")
-load("@rules_python//python:proto.bzl", "py_proto_library")
 load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
 load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_doc")
+
+package(default_visibility = ["//visibility:private"])
+
+proto_library(
+    name = "hello_proto",
+    srcs = ["hello.proto"],
+    visibility = ["//visibility:public"],
+)
+
+proto_compile(
+    name = "hello_cpp_compile",
+    outputs = [
+        "hello.pb.cc",
+        "hello.pb.h",
+    ],
+    plugins = ["@build_stack_rules_proto//plugin/builtin:cpp"],
+    proto = "hello_proto",
+    visibility = ["//visibility:public"],
+)
+
+proto_compile(
+    name = "hello_python_compile",
+    outputs = [
+        "hello_pb2.py",
+        "hello_pb2.pyi",
+    ],
+    plugins = [
+        "@build_stack_rules_proto//plugin/builtin:pyi",
+        "@build_stack_rules_proto//plugin/builtin:python",
+    ],
+    proto = "hello_proto",
+    visibility = ["//visibility:public"],
+)
+
+proto_cc_library(
+    name = "hello_cc_library",
+    srcs = ["hello.pb.cc"],
+    hdrs = ["hello.pb.h"],
+    visibility = ["//visibility:public"],
+    deps = ["@com_google_protobuf//:protobuf"],
+)
+
+proto_py_library(
+    name = "hello_py_library",
+    srcs = ["hello_pb2.py"],
+    visibility = ["//visibility:public"],
+    deps = ["@com_google_protobuf//:protobuf_python"],
+)
 
 rust_binary(
     name = "hello_world",
@@ -24,34 +74,13 @@ rust_doc(
     crate = ":hello_world",
 )
 
-proto_library(
-    name = "hello_proto",
-    srcs = ["hello.proto"],
-    visibility = ["//visibility:public"],
-)
-
-cc_proto_library(
-    name = "hello_cc_proto",
-    visibility = [
-        "//examples/basic/app:__subpackages__",
-    ],
-    deps = [":hello_proto"],
-)
-
-py_proto_library(
-    name = "hello_py_pb2",
-    deps = [":hello_proto"],
-)
-
 py_test(
     name = "hello_test",
     srcs = ["hello_test.py"],
     deps = [
-        "//examples/basic:hello_py_pb2",
+        "//examples/basic:hello_py_library",
     ],
 )
-
-package(default_visibility = ["//visibility:private"])
 
 py_library(
     name = "main",
