--- a/gazelle_proto_config.yaml
+++ b/gazelle_proto_config.yaml
@@ -3,6 +3,12 @@ plugins:
     implementation: builtin:cpp
   - name: protoc-gen-grpc-cpp
     implementation: grpc:grpc:cpp
+  - name: python
+    implementation: builtin:python
+  - name: pyi
+    implementation: builtin:pyi
+  - name: protoc-gen-grpc-python
+    implementation: grpc:grpc:protoc-gen-grpc-python
 rules:
   - name: proto_compile
     implementation: stackb:rules_proto:proto_compile
@@ -11,6 +17,7 @@ rules:
   - name: proto_cc_library
     implementation: stackb:rules_proto:proto_cc_library
     visibility:
+      # XXX: Reconsider visibility
       -  //visibility:public
     deps:
       - "@com_google_protobuf//:protobuf"
@@ -21,6 +28,17 @@ rules:
     deps:
       - "@com_github_grpc_grpc//:grpc++"
       - "@com_github_grpc_grpc//:grpc++_reflection"
+  - name: proto_python_library
+    implementation: stackb:rules_proto:proto_py_library
+    visibility:
+      -  //visibility:public
+    deps:
+      - "@com_google_protobuf//:protobuf_python"
+  - name: grpc_py_library
+    implementation: stackb:rules_proto:grpc_py_library
+    visibility:
+      -  //visibility:public
+    # XXX: Add grpc_py_library deps
 languages:
   - name: "cpp"
     plugins:
@@ -30,3 +48,12 @@ languages:
       - proto_compile
       - proto_cc_library
       - grpc_cc_library
+  - name: "python"
+    plugins:
+      - python
+      - pyi
+      - protoc-gen-grpc-python
+    rules:
+      - proto_compile
+      - proto_python_library
+      - grpc_py_library
