Start Configuration of Python Gazelle (#26)
Changes:
- Establish a mechanism for defining external python requirements via a
`requirements.in`, generating updates to a lock file with `bazel run
//:requirements.update`
- Configure gazelle python  and protobufs
- Configures via gazelle directives to use a file based approach, stick
with the BUILD configuration, disable go, default visibility to private
and resolve py imports
- Update dev_setup to install openjdk (java), tree, ranger, ag

New Commands:
```
bazel run //:requirements.update
bazel run //:gazelle_python_manifest.update
bazel run //:gazelle
```

New Tests:
```
//:requirements_test
//::gazelle_python_manifest.test
```

Notes:
- One of the recurring issues I have every time I deal with updating
WORKSPACE is slight incompatibilities with various repos that result in
incomprehensible output errors.
- stackb/rules_proto is one of the only things that seems to support
what I'm looking for, and while it is getting steady contributions
hasn't pubilshed a release in about a year.
https://github.com/rules-proto-grpc/rules_proto_grpc. Additionally, it
could be handy to look into what it would take to make my own "shitty"
version of these rules to learn more about what's going on in gazelle's
/ bazel's internals
- bzlmod migration didn't go well for me, most tutorials out there still
use WORKSPACE, might be good to look into in the future / figure out how
to migrate piecemeal, but bypassed this and 7.0.1 bazel upgrade for now

Related Issues:
- Noting the issue with requiring a gazelle directive for proto
libraries: https://github.com/bazelbuild/rules_python/issues/1703
- https://github.com/bazelbuild/rules_python/pull/1664 fixes the reason
I had to "disable" my py_binary, wait for that to release and then
update. I could probably patch this in, but don't quite know how :shrug:
- Sounds like there's some talk around gazelle c++
https://github.com/bazelbuild/bazel-gazelle/iss

--- a/examples/basic/BUILD
+++ b/examples/basic/BUILD
@@ -1,18 +1,68 @@
-load("@aspect_rules_py//py:defs.bzl", "py_binary")
+load("@build_stack_rules_proto//rules/py:proto_py_library.bzl", "proto_py_library")
+load("@build_stack_rules_proto//rules/cc:proto_cc_library.bzl", "proto_cc_library")
+load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")
+load("@aspect_rules_py//py:defs.bzl", "py_library", "py_test")
 load("@rules_proto//proto:defs.bzl", "proto_library")
 load("@rules_cc//cc:defs.bzl", "cc_library")
-load("@rules_python//python:proto.bzl", "py_proto_library")
 load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
 load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_doc")
+
+package(default_visibility = ["//visibility:private"])
+
+proto_library(
+    name = "hello_proto",
+    srcs = ["hello.proto"],
+    visibility = ["//visibility:public"],
+)
+
+proto_compile(
+    name = "hello_cpp_compile",
+    outputs = [
+        "hello.pb.cc",
+        "hello.pb.h",
+    ],
+    plugins = ["@build_stack_rules_proto//plugin/builtin:cpp"],
+    proto = "hello_proto",
+    visibility = ["//visibility:public"],
+)
+
+proto_compile(
+    name = "hello_python_compile",
+    outputs = [
+        "hello_pb2.py",
+        "hello_pb2.pyi",
+    ],
+    plugins = [
+        "@build_stack_rules_proto//plugin/builtin:pyi",
+        "@build_stack_rules_proto//plugin/builtin:python",
+    ],
+    proto = "hello_proto",
+    visibility = ["//visibility:public"],
+)
+
+proto_cc_library(
+    name = "hello_cc_library",
+    srcs = ["hello.pb.cc"],
+    hdrs = ["hello.pb.h"],
+    visibility = ["//visibility:public"],
+    deps = ["@com_google_protobuf//:protobuf"],
+)
+
+proto_py_library(
+    name = "hello_py_library",
+    srcs = ["hello_pb2.py"],
+    visibility = ["//visibility:public"],
+    deps = ["@com_google_protobuf//:protobuf_python"],
+)
 
 rust_binary(
     name = "hello_world",
     srcs = ["src/main.rs"],
-    aliases=aliases(),
+    aliases = aliases(),
     deps = [
-      "@crate_index//:ferris-says",
+        "@crate_index//:ferris-says",
     ],
-    # XXX: Not getting to work ...
+    # TODO: Get rust dependencies working
     # deps = all_crate_deps(),
     # proc_macro_deps = all_crate_deps(
     #     proc_macro = True,
@@ -24,34 +74,16 @@ rust_doc(
     crate = ":hello_world",
 )
 
-proto_library(
-  name = "hello_proto",
-  srcs = ["hello.proto"],
-  deps = [],
-)
-
-cc_proto_library(
-  name = "hello_cc_proto",
-  deps = [":hello_proto"],
-  visibility = [
-    "//examples/basic/app:__subpackages__",
-  ],
-)
-
-py_proto_library(
-  name = "hello_py_pb2",
-  deps = [":hello_proto"],
-)
-
 py_test(
-  name = "hello_test",
-  srcs = ["hello_test.py"],
-  deps = [
-    ":hello_py_pb2",
-  ],
+    name = "hello_test",
+    srcs = ["hello_test.py"],
+    deps = [
+        "//examples/basic:hello_py_library",
+    ],
 )
 
-py_binary(
-  name = "main",
-  srcs = ["main.py"],
+py_library(
+    name = "main",
+    srcs = ["main.py"],
+    visibility = ["//:__subpackages__"],
 )
