--- a/ansible_playbooks/dev_setup.yaml
+++ b/ansible_playbooks/dev_setup.yaml
@@ -59,10 +59,18 @@
               - xclip
               - curl
               # gcc
-              # XXX: Determine how to get bazel running without this installed
+              # TODO: Determine how to get bazel running without this installed
               - build-essential
+              # java
+              # TODO: same deal as build-essential
+              - openjdk-19-jre-headless
               # For development purposes
               - python3.10-venv
+              # Directory Viewing Utilities
+              - tree
+              - ranger
+              # Searching
+              - silversearcher-ag
 - name: Configure Dynamic DNS
   hosts: all
   tasks:
