--- a/.bazelrc
+++ b/.bazelrc
@@ -5,10 +5,16 @@ build --noincompatible_sandbox_hermetic_tmp
 
 # XXX: Should uncomment this
 # https://github.com/aspect-build/gcc-toolchain/issues/85
-# build --incompatible_enable_cc_toolchain_resolution
-# build --action_env=BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
+build --incompatible_enable_cc_toolchain_resolution
+build --action_env=BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
 # Performance per #85
 build --experimental_reuse_sandbox_directories
+# Have rules_rust use the right hermetic toolchain sysroot, symlink folders
+# into execution directory
+build --@rules_rust//cargo/settings:experimental_symlink_execroot=True
+
+# https://github.com/bazelbuild/bazel/issues/20161
+build --experimental_remote_cache_eviction_retries=5
 
 # Prevent python use of ~/.local/lib
 build --action_env=PYTHONNOUSERSITE=1
@@ -26,5 +32,4 @@ build --copt -Werror
 # Choose your Vehicle ... Hydro Thunder
 # XXX: Update to 21?
 # XXX: Not working
-# build --cxxopt='-std=c++17'
-# build --action_env=BAZEL_CXXOPTS=-std=c++17
+build --cxxopt='-std=c++17' --host_cxxopt='-std=c++17'
