--- a/.bazelrc
+++ b/.bazelrc
@@ -5,8 +5,8 @@ build --noincompatible_sandbox_hermetic_tmp
 
 # XXX: Should uncomment this
 # https://github.com/aspect-build/gcc-toolchain/issues/85
-build --incompatible_enable_cc_toolchain_resolution
-build --action_env=BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
+# build --incompatible_enable_cc_toolchain_resolution
+# build --action_env=BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
 # Performance per #85
 build --experimental_reuse_sandbox_directories
 # Have rules_rust use the right hermetic toolchain sysroot, symlink folders
