--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,38 @@ user.bazelrc
 
 # VS Code
 .vscode/arduino.json
+
+# KiCad (started from https://github.com/github/gitignore/blob/main/KiCad.gitignore)
+# For PCBs designed using KiCad: https://www.kicad.org/
+# Format documentation: https://kicad.org/help/file-formats/
+
+# Temporary files
+*.000
+*.bak
+*.bck
+*.kicad_pcb-bak
+*.kicad_sch-bak
+*-backups
+*.kicad_prl
+*.sch-bak
+*~
+_autosave-*
+*.tmp
+*-save.pro
+*-save.kicad_pcb
+fp-info-cache
+
+# Netlist files (exported from Eeschema)
+*.net
+
+# Autorouter files (exported from Pcbnew)
+*.dsn
+*.ses
+
+# Exported BOM files
+*.xml
+*.csv
+
+# Output directory
+# XXX: Rename to be more specific
+output_files/
