--- a/ansible_playbooks/dev_setup.yaml
+++ b/ansible_playbooks/dev_setup.yaml
@@ -49,88 +49,6 @@
 # TODO:
 # - register users with dialout
 # - passwordless sudo?
-- name: Setup a new machine for a developer
-  hosts: all
-  tasks:
-    - become: true
-      block:
-        - name: Configure apt for syncthing
-          block:
-            - name: syncthing |no apt key
-              ansible.builtin.get_url:
-                url: https://syncthing.net/release-key.gpg
-                dest: /etc/apt/keyrings/syncthing-archive-keyring.gpg
-            - name: syncthing | apt source
-              ansible.builtin.apt_repository:
-                repo: "deb [signed-by=/etc/apt/keyrings/syncthing-archive-keyring.gpg] https://apt.syncthing.net/ syncthing stable"
-                state: present
-        - name: Configure kicad apt repositories
-          ansible.builtin.apt_repository:
-            repo: "ppa:kicad/kicad-7.0-releases"
-        - name: Install Packages
-          ansible.builtin.package:
-            # TODO: versions?
-            name:
-              - neovim
-              - git
-              - tmux
-              - htop
-              - xclip
-              - curl
-              # gcc
-              # TODO: Determine how to get bazel running without this installed
-              - build-essential
-              # java
-              # TODO: same deal as build-essential
-              # - openjdk-19-jre-headless
-              # Switched from ^ to have gui
-              - openjdk-19-jre
-              # For development purposes
-              - python3.10-venv
-              # Directory Viewing Utilities
-              - tree
-              - ranger
-              # Searching
-              - silversearcher-ag
-              # AppImage Support
-              - fuse3  # was originally fuse, but hopefully this is fine (fuse conflicts w/ ubuntu-desktop)
-              - libfuse2
-              # Sharing notes
-              # TODO: COnfigure as a service
-              - syncthing
-              # XXX: waveforms is crashing when attempting to start
-              # NOTE: Can start fine from application launcher :shrug:
-              # TODO: digilent-agent isn't working though / no launcher
-              - libqt5serialport5-dev
-              - xterm
-              - libxcb-xinput-dev
-              # - qt5-default  # XXX: This should fix, but is unavailable
-              - arduino
-              - blender
-              - kicad
-              # https://code.visualstudio.com/download#
-              # Visualization of system metrics in toolbar
-              - gnome-system-monitor
-              - chrome-gnome-shell  # post 22.04 use gnome-browser-connector
-              - gir1.2-gtop-2.0
-              - gir1.2-nm-1.0
-              - gir1.2-clutter-1.0
-              # Ensure usual settings, etc. are accessible, reruns every time ...
-              - ubuntu-desktop
-              #
-        # TODO: Improve speed of these (seems to re-download each time)
-        # - name: Install Digilent Adept for Waveforms
-        #   ansible.builtin.apt:
-        #     deb: https://digilent.s3.us-west-2.amazonaws.com/Software/Adept2+Runtime/2.27.9/digilent.adept.runtime_2.27.9-amd64.deb
-        # - name: Install Waveforms
-        #   ansible.builtin.apt:
-        #     deb: https://digilent.s3.us-west-2.amazonaws.com/Software/Waveforms2015/3.21.3/digilent.waveforms_3.21.3_amd64.deb
-        # - name: Install Waveforms Agent
-        #   ansible.builtin.apt:
-        #     deb: https://s3-us-west-2.amazonaws.com/digilent/Software/Digilent+Agent/1.0.1/digilent-agent_1.0.1-1_amd64.deb
-        # - name: Install vscode
-        #   ansible.builtin.apt:
-        #     deb: https://code.visualstudio.com/sha/download?build=stable&os=linux-deb-x64
 - name: Configure Dynamic DNS
   hosts: all
   tasks:
@@ -169,15 +87,15 @@
           ansible.builtin.package:
             name:
               - openssh-server
-        - name: Configure Keys
-          ansible.posix.authorized_key:
-            # TODO: don't hardcode
-            user: mchristen
-            state: present
-            key: '{{ item }}'
-          with_file:
-            - ssh_keys/mchristen_work
-            - ssh_keys/mchristen_phone
+        # - name: Configure Keys
+        #   ansible.posix.authorized_key:
+        #     # TODO: don't hardcode
+        #     user: mchristen
+        #     state: present
+        #     key: '{{ item }}'
+        #   with_file:
+        #     - ssh_keys/mchristen_work
+        #     - ssh_keys/mchristen_phone
 # XXX: This doesn't seem to properly be setting us up
 # Instead, we are simply linked to input/event..
 - name: Configure udev rules
