--- a/examples/basic/BUILD
+++ b/examples/basic/BUILD
@@ -97,18 +97,18 @@ py_binary(
     visibility = ["//:__subpackages__"],
 )
 
-grpc_cc_library(
-    name = "hello_grpc_cc_library",
-    srcs = ["hello.grpc.pb.cc"],
-    hdrs = ["hello.grpc.pb.h"],
-    visibility = ["//visibility:public"],
-    deps = [
-        ":hello_cc_library",
-        "@com_github_grpc_grpc//:grpc++",
-        "@com_github_grpc_grpc//:grpc++_reflection",
-        "@com_google_protobuf//:protobuf",
-    ],
-)
+# grpc_cc_library(
+#     name = "hello_grpc_cc_library",
+#     srcs = ["hello.grpc.pb.cc"],
+#     hdrs = ["hello.grpc.pb.h"],
+#     visibility = ["//visibility:public"],
+#     deps = [
+#         ":hello_cc_library",
+#         "@com_github_grpc_grpc//:grpc++",
+#         "@com_github_grpc_grpc//:grpc++_reflection",
+#         "@com_google_protobuf//:protobuf",
+#     ],
+# )
 
 grpc_py_library(
     name = "hello_grpc_py_library",
