--- a/gazelle_proto_config.yaml
+++ b/gazelle_proto_config.yaml
@@ -47,7 +47,7 @@ languages:
     rules:
       - proto_compile
       - proto_cc_library
-      - grpc_cc_library
+      # - grpc_cc_library
   - name: "python"
     plugins:
       - python
