--- a/requirements.in
+++ b/requirements.in
@@ -1,1 +1,4 @@
+# bazel run //:requirements.update && bazel run //:gazelle_python_manifest.update
 beautifulsoup4
+grpcio
+# XXX: Maybe grpcio-tools?
